maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:57: error: identifier expected but integer literal found.
  autour = new int[4]
                   ^JediEscaper:59: error: ']' expected but ';' found.
  def bagglePos:Array[int] = (0,0)
^